[package]
name = "mdbook-blush"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["std"], default-features = false }
clap = { version = "4.5.41", default-features = false, features = [
  "color",
  "derive",
  "wrap_help",
] }
indoc = { version = "2.0.6", default-features = false }
mdbook = { version = "0.4.52", default-features = false }
pulldown-cmark = { version = "0.13.0", default-features = false }
pulldown-cmark-to-cmark = { version = "21.0.0", default-features = false }
semver = { version = "1.0.26", default-features = false, features = ["std"] }
serde_json = "1.0.141"
toml_edit = { version = "0.23.2", default-features = false, features = ["display", "parse"] }

[dev-dependencies]
googletest = "0.14.2"
insta = "1.43.1"
tempdir = "0.3.7"
tempfile = "3.20.0"
